# pdfium-v8-win_dll_test

./: CMakeLists.txt  README.md  create_form_pdf_.py  main - test-print-formFields.cpp  main-01-pdf表单插入图片和字段另存.cpp  main-02-pdf平坦化-生成新的pdf.cpp  main-03-平坦化后-手动删除表单字段显示-生成新的pdf.cpp  main-04-把Pdf转为图片输出.cpp  main-test-ceate-pdf-image.cpp  main-test-flatten-form-cannot-edit.cpp  main-test-form-create.cpp  main-test-form-fill-image.cpp  main-test-form-fill.cpp  main-test1.cpp  main-test_pdf_to_image.cpp  main-使用XFA报错.cpp  main-创建一个注释.cpp  main.cpp  main_after_flatten_remove_form_by_code.cpp
include/: fpdf_annot.h  fpdf_flatten.h
include/libjp/: jmorecfg.h
lib/: pdfium.dll.lib
